# ai_hydra

./: .accounting.txt.swp  .coverage  .gitignore  .readthedocs.yaml  .~lock.rnn-tuning.ods#  AI_HYDRA_ROUTER_IMPLEMENTATION.md  ATH-Replay-Memory.md  CHANGELOG.md  CNAME  EPOCH_DISPLAY_IMPLEMENTATION.md  MANIFEST.in  ORGANIZATION_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  README.md  ROUTER_IMPLEMENTATION_SUMMARY.md  _config.yml  accounting.txt  decision_flow_rework_summary.md  demo_headless_server.py  demo_tui.py  fix_design_code_blocks.py  ideas-1.md  ideas-2.md  ideas-3.md  ideas.txt  ideas_3.md  manual_test_server.py  policy-stack.txt  pyproject.toml  qasync.sh  requirements-docs.txt  requirements.txt  rnn-tuning.ods  scratch.py  setup.py  test_documentation.py  test_server_shutdown.py  update_version.sh
.github/workflows/: sphinx.yml
.hypothesis/constants/: 047e4c56f408df26  0797b146af7b2ea0  0be5d984c4154932  135a328c9717d103  151e49c0a0415cb3  158f7cae0c040e46  1eadd43f286db61b  209a37dadaa9ddb8  24db42b16ed2ce34  27ef4b37eb39fda4  28b311e594f0643b  29f6a8253942ff99  2f2a98cac490a82f  2fd3419f56243ce5  31acfad42b84fa3e  34866f0c7924d584  37a4c2b231e743aa  3a9db9f9417302bb  439e6f16627c9760  524924f8a0eaf48b  52c047226221739d  55edd4ebf1f40858  563e15146ca118cf  5680f930b8bd0782  68bf0809f438d952  72c98a19628a539e  754be9c0b42c3b02  758c60891466f13d  7731048f1d1aa3a2  77d8c63763074975  783f82c322bf1661  78da7d6d172365f5  7d4b1dfde8caa8c7  7e2d64f6002899eb  82546f50e6dd9e2d  89e36a8d55bde684  8c02a6f38c026987  8d009db6dcf5917c  993ae77376ba1937  9dfdd834d6fb83ad  (+19 more)
.kiro/: token_transactions.csv  token_transactions_backup_20251231_084741.csv
.kiro/hooks/: auto-git-commit.kiro.hook  changelog-updater.kiro.hook  docs-update-hook.kiro.hook  git-commit-validation.kiro.hook  token-tracking-start.kiro.hook  token-tracking.kiro.hook  version-updater.kiro.hook
.kiro/steering/: changelog-documentation-standards.md  code-style.md  comprehensive-testing-standards.md  directory-layout-standards.md  documentation-standards.md  git-conventions.md  pbt-guidelines.md  pytorch-standards.md  testing-standards.md  token-tracking-standards.md
ai-hydra/env/: BaseEnv.py  Env.py
ai-hydra/misc/: DataLoader.py
ai-hydra/network/: MQClient.py
ai-hydra/policy/: BasePolicy.py  Policy.py
ai-hydra/server/: HydraSimServer.py  hydra_server.py
ai_hydra/: .gitignore  __init__.py  headless_server.py  mq_client.py  router.py  run_training.py  simple_client.py  validation.py  zmq_server.py
ai_hydra/client/: ATHMemory.py  ClientGameBoard.py  EventLog.py  HighScoresLog.py  HydraClient.py  HydraClient.tcss  HydraDebugClient.py  HydraPong.py  HydraPong.tcss  HydraTelemetry.py  PongBoard.py  TabbedPlots.py  TabbedScores.py  TabbedSettings.py  UNUSED_TabbedPlots.py
ai_hydra/constants/: DEpsilonNice.py  DEvent.py  DGame.py  DHydra.py  DHydraTui.py  DMQ.py  DModels.py  DNNet.py  DNet.py  DReplayMemory.py  DSim.py  DSimCfg.py
ai_hydra/env/: BaseEnv.py  Env.py
ai_hydra/game/: GameBoard.py  GameHelper.py  GameLogic.py  MoveResult.py  OLD_GameLogic.py  PongLogic.py
ai_hydra/mcts/: MCTSConfig.py  MCTSNode.py  Node.py  mcts_play.py
ai_hydra/misc/: DataLoader.py  HydraLogger.py
ai_hydra/model/: BaseModel.py  Model.py
ai_hydra/network/: MQClient.py  MQHelper.py
ai_hydra/nnet/: ATHReplayMemory.py  Broken_RNNTrainer.py  Device.py  EpsilonAlgo.py  EpsilonNiceAlgo.py  EpsilonPolicy.py  HydraPolicy.py  HydraRng.py  LinearPolicy.py  LinearTrainer.py  LookaheadPolicy.py  OLD_Trainer.py  RNNTrainer.py  RNNTrainer2.py  RandomPolicy.py  TrainMgr.py  (+7 more)
docs/: .readthedocs.yaml  DOCUMENTATION_UPDATE_SUMMARY.md  Makefile  requirements.txt
examples/: README.md  debug_test.py  demo_tui.py  minimal_test.py  simple_client.py  simple_router_test.py  test_router_demo.py
hydra-router/: .gitignore  LICENSE  README.md  pyproject.toml
hydra-router/examples/: basic_client_server.py
hydra-router/src/hydra_router/: __init__.py  cli.py  exceptions.py  mq_client.py  router.py  router_constants.py  validation.py  zmq_protocol.py
hydra-router/tests/: __init__.py  conftest.py
notes/: notes.md
old/: mq_client.py
scripts/: devsync.sh  organize_files.sh  pre-release-check.sh  qa-client  qa-mgr  qa-router  qasync.sh
tests/: test_end_to_end_simulation.py  test_headless_operation.py  test_hybrid_execution.py  test_hydra_zen_integration.py  test_log_level_propagation.py  test_neural_network.py  test_parallel_nn_lifecycle.py  test_rnn_regression.py  test_tui_minimal.py  test_zmq_communication.py  verify_production_tui.py
tools/: README.md
version_backup_20251230_171427/: conf.py  pyproject.toml  setup.py
version_backup_20251230_204830/: __init__.py  conf.py  pyproject.toml  setup.py
version_backup_20251230_212058/: conf.py  setup.py
(+425 files in other folders)
