[project]
name = "ai-hydra"
version = "0.1.2"
description = "MBRL Implementation of an AI Agent playing the OG Snake Game."
authors = [{ name = "Nadim-Daniel Ghaznavi", email = "nghaznavi@gmail.com" }]
license = { text = "GPL-3.0" }
readme = "README.md"
homepage = "https://aihydra.osoyalce.com/"
repository = "https://github.com/NadimGhaznavi/ai-hydra"
keywords = ["AI", "Model Based Reinforcement Learning", "PyTorch", "Reinforcement Learning", "Textual", "Snake", "Simulation", "SQLite", "Python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.11,<3.15"

dependencies = [
    "textual>=6.2.1",
    "textual-plot>=0.8.0",
    "textual-hires-canvas>=0.10.1",
    "textual-serve>=1.1.2",
    "rich>=14.2.0",
    "numpy>=2.3.3",
    "loguru>=0.7.3",
    "pillow>=11.0.0",
    "jinja2>=3.1.6",
    "aiohttp>=3.13.0",
    "sqlite-utils>=3.35",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "textual-dev>=1.7.0",
    "pyzmq>=27.1.0",
    "hydra-core>=1.3.2",
    "hydra-zen>=0.16.0",
]

[project.scripts]
sim-server = "ai-hydra.server.SimServer:main"
hydra-sim-server = "ai-hydra.server.HydraSimServer:main"
sim-router = "ai-hydra.server.SimRouter:main"

[project.urls]
"Bug Tracker" = "https://github.com/NadimGhaznavi/ai-hydra/issues"
"Documentation" = "https://aihydra.osoyalce.com/"
"Source" = "https://github.com/NadimGhaznavi/ai-hydra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
